WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310246
REGRESSION(
309514@main
): Double-quoted include "FindOptions.h" in framework header, expected angle-bracketed instead
https://bugs.webkit.org/show_bug.cgi?id=310246
Summary
REGRESSION(309514@main): Double-quoted include "FindOptions.h" in framework h...
Jonathan Bedard
Reported
2026-03-18 20:45:19 PDT
After
https://commits.webkit.org/309514@main
, "Double-quoted include "FindOptions.h" in framework header, expected angle-bracketed instead"
Attachments
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2026-03-18 20:45:20 PDT
<
rdar://problem/172886971
>
Jonathan Bedard
Comment 2
2026-03-18 20:46:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60908
EWS
Comment 3
2026-03-18 20:48:10 PDT
Committed
309526@main
(ef0e09518358): <
https://commits.webkit.org/309526@main
> Reviewed commits have been landed. Closing PR #60908 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug